vlib/v/checker/tests/immutable_rec.vv
struct St {
mut:
	e int
}

fn (mut x St) f() {
	x.e++
	println(x)
}

fn main() {
	a := St{
		e: 2
	}
	a.f()
}
